--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <app-root></app-root>
+  <section class="gen-wrapper">
+    <app-root></app-root>
+  </section>
 </body>
 </html>
