feat: improve meta and a11y #14

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Generator</title>
+  <meta name="description" content="Generate a random string">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
