feat: improve wording #18

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Generator</title>
-  <meta name="description" content="Generate a random string">
+  <meta name="description" content="A simple tool to generate a random string">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, minimal-ui">
   <base href="/">
 </head>
